Optionally show presence info on /account using the Open AIM presence service:  - HippoProperty, properties-services.xml, base.conf:     - add optional param field for AIM presence key (see developer.aim.com)  - AccountPage, account.jsp:     - place the aim presence graphic if a key was specified

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -98,6 +98,9 @@
 		password below -->
 	<parameter name="imbotScreenName">PleaseSetThisInSuperConf</parameter>
 
+	<!-- AIM presence key for showing user presence; see developer.aim.com -->
+	<parameter name="aimPresenceKey"></parameter>
+
 	<!-- you have to create an Amazon web services account and put the key here -->
 	<parameter name="amazonAccessKeyId"></parameter>
 	
