- Add JDom, Rome, Rome-Fetcher to the EAR - Add initial crude code to fetch a feed from the web and stuff it into the database - Add /text/feedump?url=<...> debug method

--- a/dumbhippo/trunk/.classpath
+++ b/dumbhippo/trunk/.classpath
@@ -85,5 +85,7 @@
 	<classpathentry kind="lib" path="hungry/lib/httpunit-1.6.2.jar"/>
 	<classpathentry kind="lib" path="wildfire/build/lib/merge/jstl.jar"/>
 	<classpathentry kind="lib" path="server/lib/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="server/lib/rome-0.8.jar"/>
+	<classpathentry kind="lib" path="server/lib/rome-fetcher-0.7.jar"/>
 	<classpathentry kind="output" path="eclipse-bin"/>
 </classpath>
