--- a/dumbhippo/trunk/.classpath
+++ b/dumbhippo/trunk/.classpath
@@ -87,5 +87,7 @@
 	<classpathentry kind="lib" path="server/lib/bsh-2.0b4.jar"/>
 	<classpathentry kind="lib" path="server/lib/rome-0.8.jar"/>
 	<classpathentry kind="lib" path="server/lib/rome-fetcher-0.7.jar"/>
+	<classpathentry kind="lib" path="server/lib/tagsoup-1.0.jar"/>
+	<classpathentry kind="lib" path="server/lib/jdom-1.0.jar"/>
 	<classpathentry kind="output" path="eclipse-bin"/>
 </classpath>
