Added a function that returns a GroupView based on the group id to the GroupSystem, and did some corresponding restructuring in GroupPage and ChatWindowPage.
MessangerGlueRemote.java
Renamed getRecentPostsXml to getPostsXml and changed its arguments to
be guid objects of user and post, as well as an optional outer element name for 
the stream of post-related objects.

Room.java
Have object xml for either post or group be included in the room info, when room details 
are requested.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -25,10 +25,10 @@
 	<!-- Guid of the summit group -->
 	<parameter name="summitGroupGuid">vCzMssGXCz0xfh</parameter>
 	
-    <!-- Invitations for a regular new users -->
+    <!-- Invitations for a regular new user -->
 	<parameter name="newUserInvitationCount">0</parameter>	
 	
-	<!-- Invitations for a special new users, e.g someone from the "wants in" list -->
+	<!-- Invitations for a special new user, e.g someone from the "wants in" list -->
 	<parameter name="specialNewUserInvitationCount">5</parameter>	
 	
 	<!-- The log level for the com.dumbhippo logger, DEBUG, INFO, WARN, ERROR -->
