Changes to support group chat notifications:
Reworked how message history is inserted into chat rooms to fix
possible corner cases; we now differentiate on whether or not the
message is historical.  Parse associated objects from roomInfo
when loading a chat room.  This fixes bugs on chatting in a
chat room when the client hadn't yet seen the associated object,
such as an old post.

Add HippoChatRoom association to HippoEntity (only when type == GROUP).

Add new notification types to notification javascript related to group
updates.  Modify HippoBubble to also create bubbles on messages to 
group chat rooms.

--- a/dumbhippo/trunk/client/windows/Applets/Makefile
+++ b/dumbhippo/trunk/client/windows/Applets/Makefile
@@ -9,7 +9,9 @@ all: *.xml *.css *.png *.js
     copy chaticon.gif $(OUTDIR)\applets    
     copy clientstyle.xml $(OUTDIR)\applets
     copy bubclose.png $(OUTDIR)\applets
+    copy bubclose_purple.png $(OUTDIR)\applets    
     copy bubedge_*.png $(OUTDIR)\applets
+    copy bubgroupupdate.gif $(OUTDIR)\applets
     copy bublinkswarm.gif $(OUTDIR)\applets
     copy dh.css $(OUTDIR)\applets	    
     copy dh.js $(OUTDIR)\applets
@@ -21,6 +23,7 @@ all: *.xml *.css *.png *.js
     copy linkswarm.gif $(OUTDIR)\applets
     copy ls_bubshadow.png $(OUTDIR)\applets
     copy lsorange_*.png $(OUTDIR)\applets
+    copy lspurple_*.png $(OUTDIR)\applets    
     copy lswhite_*.png $(OUTDIR)\applets
     copy menu.css $(OUTDIR)\applets	
     copy menu.js $(OUTDIR)\applets
