Add Flickr web services implementation (only supports one method to start)

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -109,8 +109,11 @@
 
 	<!-- stuff for your eBay developer account -->
 	<parameter name="ebayDevId"></parameter>
-        <parameter name="ebayAppId"></parameter>
-        <parameter name="ebayCertId"></parameter>
+    <parameter name="ebayAppId"></parameter>
+    <parameter name="ebayCertId"></parameter>
+
+	<!-- flickr api id -->
+	<parameter name="flickrApiId"></parameter>
 
 	<service name="mysql" enabled="$mysqlEnabled">
 		<parameter name="targetdir">$mysqlTargetdir</parameter>
