Add support for Rhapsody play links, and tracking of play history through Rhapsody's "Personal Listening History Track Feeds".
Account, Feed, AccountFeed:
- Add notion of per-account feeds, mirroring how per-group feeds
  work.  This is general enough to be re-used for arbitrary
  per-account RSS feeds in the future; right now we only use it
  for zero or one Rhapsody track playlist feeds per account.

FeedEntry, TrackFeedEntry:
- Add a TrackFeedEntry subclass of FeedEntry for feed entries
  that have track metadata (e.g. those we get from Rhapsody)

RhapLink:
- New entity bean for caching active status of "Rhapsody Links";
  similar in concept to YahooSongDownloadResult

RhapModule, RhapModuleGenerator, RhapModuleImpl, RhapModuleParser,
rome.properties, build.xml:
- Add module parser and generator for the custom tags in Rhapsody's
  RSS feed.  Adjust build file to include the new rome.properties
  configuring this in .ejb3 archive.

FeedSystem, FeedSystemBean:
- Generate TrackFeedEntry's for entries from Rhapsody feeds,
  call into MusicSystem.addFeedTrack() to process track
  information we get from feeds.

MusicSystem, MusicSystemBean,
MusicSystemInternal, MusicSystemInternalBean:
- Add addFeedTrack() - record track and track history
  information for a feed entry
- Add getRhapsodyDownloadUrl():
    1) try concocting a Rhapsody "friendly url" using
       the artist name, album name, and track number
    2) Test the friendly URL by doing an HTTP HEAD to see if
       we get a 200 response
    3) If it worked, add it as a download result with type
       RHAPSODY
    4) Cache results using RhapLink entity bean.
- Call getRhapsodyDownloadUrl() from 

SongDownloadSource:
- Disable capture of "legacy Rhapsody" results returned
  by Yahoo Audio search web service

HttpMethods, HttpMethodsBean:
- Add private doAddAccountFeed, doRemoveAccountFeed XML methods
  mirroring existing ones for group
- Add public doSetRhapsodyListeningHistoryFeedUrl that uses
  the above two m

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -200,6 +200,7 @@
 	<target name="ejb3jar" depends="compile">
 		<jar destfile="${buildjar.dir}/dumbhippo.ejb3">
 			<fileset dir="${build}">
+				<include name="rome.properties" />
 				<include name="**/live/*.class" />
 				<include name="**/recommender/*.class" />
 				<include name="**/postinfo/*.class" />
