Add support for sending group invite IQ to main and HippoConnection.
Display "Invite" option on group membership in bubble, and hook
it up to the above.

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -41,6 +41,7 @@ mugshot_SOURCES	=				\
 
 EMBEDDEDIMAGEDIR=images
 EMBEDDED_IMAGES=				\
+	$(EMBEDDEDIMAGEDIR)/add.png	\
 	$(EMBEDDEDIMAGEDIR)/bublinkswarm.gif	\
 	$(EMBEDDEDIMAGEDIR)/bubgroupupdate.gif	\
 	$(EMBEDDEDIMAGEDIR)/blueleftarrow.gif	\
