--- a/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
+++ b/dumbhippo/trunk/client/windows/HippoCommon/HippoCommon.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../HippoUtil;../dependencies/glib/include/glib-2.0;../dependencies/glib/lib/glib-2.0/include;../loudmouth;../../common;../../common/loudmouth"
+				AdditionalIncludeDirectories=".;../HippoUtil;../dependencies/glib/include/glib-2.0;../dependencies/glib/lib/glib-2.0/include;../loudmouth;../../common;../../common/loudmouth"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;HIPPOCOMMON_EXPORTS"
 				MinimalRebuild="TRUE"
 				BasicRuntimeChecks="3"
@@ -113,6 +113,19 @@
 				RelativePath="..\..\common\hippo\hippo-chat-room.c">
 			</File>
 			<File
+				RelativePath=".\hippo-common-marshal.c">
+			</File>
+			<File
+				RelativePath="..\..\common\hippo\hippo-common-marshal.list">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCustomBuildTool"
+						CommandLine="genmarshal.bat"
+						Outputs="hippo-common-marshal.c;hippo-common-marshal.h"/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="..\..\common\hippo\hippo-connection.c">
 			</File>
 			<File
@@ -146,6 +159,9 @@
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-chat-room.h">
+			</File>
+			<File
+				RelativePath=".\hippo-common-marshal.h">
 			</File>
 			<File
 				RelativePath="..\..\common\hippo\hippo-common.h">
