Revert the last change, locate hippo-common-marshalers a different way, don't want to have to reboot to Windows and move stuff around there

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -2,6 +2,7 @@ noinst_LTLIBRARIES += libhippo.la
 
 libhippo_la_CPPFLAGS =			\
 	$(AM_CPPFLAGS)			\
+	-I $(MARSHAL_DIR)		\
 	$(LIBHIPPO_CFLAGS)
 
 libhippo_la_LIBADD = 			\
