default mysql to innodb

--- a/dumbhippo/trunk/super/mysql/files/conf/my.cnf
+++ b/dumbhippo/trunk/super/mysql/files/conf/my.cnf
@@ -11,7 +11,38 @@ port=@@mysqlPort@@
 #log=@@targetdir@@/log/queries.log
 log_slow_queries=@@targetdir@@/log/slow-queries.log
 long_query_time=1
-     
+# this flag (vs. skip_innodb) makes innodb available as a choice (only needed on some mysql versions)
+innodb
+# this defaults us to innodb
+default_storage_engine=innodb
+
+############# Innodb settings
+############# See http://dev.mysql.com/doc/refman/4.1/en/innodb-configuration.html     
+# Data files must be able to hold your data and indexes
+# this sets up a file ibdata1 in the above datadir (use absolute path to go elsewhere,
+# to use absolute paths you have to set inndb_data_home_dir to empty string)
+# :autoextend = will automatically grow as needed. Assuming large file support here - lacking that,
+# do :autoextend:max:2G instead of just :autoextend. You can also list multiple 
+# semicolon-separated files here
+innodb_data_file_path = dh_innodb_1:20M:autoextend
+
+# Set buffer pool size to 50-80% of your computer's memory,
+# but make sure on Linux x86 total memory usage is < 2GB
+# to avoid problems with overflowing the stack
+set-variable = innodb_buffer_pool_size=1G
+set-variable = innodb_additional_mem_pool_size=20M
+
+#
+# Set the log file size to about 25% of the buffer pool size
+set-variable = innodb_log_file_size=250M
+set-variable = innodb_log_buffer_size=8M
+
+innodb_flush_log_at_trx_commit=1
+set-variable = innodb_lock_wait_timeout=50
+#
+# Uncomment the next lines if you want to use them
+#set-variable = innodb_thread_concurrency=5
+
 [mysqld_safe]
 err-log=@@targetdir@@/log/mysqld.log
 pid-file=@@targetdir@@/run/mysqld.pid
