Make mysql innodb memory/file size parameters configurable.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -129,6 +129,16 @@
 		<parameter name="statusCommand">$targetdir/scripts/mysql-status.sh</parameter>
 		<parameter name="consoleCommand">$targetdir/scripts/mysql-console.sh</parameter>
 		<parameter name="nukeCommand">$targetdir/scripts/mysql-nuke.sh</parameter>				 
+		
+		<!-- these values are oriented toward a debug instance, not anything production
+		     where they should probably be much larger. Mysql's recommendation is 
+		     buffer pool size of 50-80% of physical memory, and log file size of 
+		     25% of buffer pool size, for a dedicated database machine. -->
+		<parameter name="innodbBufferPoolSize">50M</parameter>
+		<parameter name="innodbLogFileSize">15M</parameter>
+		<parameter name="innodbLogBufferSize">8M</parameter>
+		<!-- not really sure what this should be -->
+		<parameter name="innodbAdditionalMemPoolSize">20M</parameter>
 	</service>
 
 	<service name="pgsql" enabled="$pgsqlEnabled">
