--- a/dumbhippo/trunk/super/mysql/files/conf/my.cnf
+++ b/dumbhippo/trunk/super/mysql/files/conf/my.cnf
@@ -29,13 +29,13 @@ innodb_data_file_path = dh_innodb_1:20M:autoextend
 # Set buffer pool size to 50-80% of your computer's memory,
 # but make sure on Linux x86 total memory usage is < 2GB
 # to avoid problems with overflowing the stack
-set-variable = innodb_buffer_pool_size=1G
-set-variable = innodb_additional_mem_pool_size=20M
+set-variable = innodb_buffer_pool_size=@@innodbBufferPoolSize@@
+set-variable = innodb_additional_mem_pool_size=@@innodbAdditionalMemPoolSize@@
 
 #
 # Set the log file size to about 25% of the buffer pool size
-set-variable = innodb_log_file_size=250M
-set-variable = innodb_log_buffer_size=8M
+set-variable = innodb_log_file_size=@@innodbLogFileSize@@
+set-variable = innodb_log_buffer_size=@@innodbLogBufferSize@@
 
 innodb_flush_log_at_trx_commit=1
 set-variable = innodb_lock_wait_timeout=50
