--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -19,6 +19,9 @@
 	<!-- Whether or not to enable the "admin" web page -->
 	<parameter name="adminConsole">false</parameter>
 
+	<!-- Whether or not we have new feature descriptions on the features page -->
+	<parameter name="newFeatures">false</parameter>
+	
 	<!-- Whether to run in "stealth mode" (only a minimal set of pages public) -->
 	<parameter name="stealthMode">false</parameter>
 	
